Revert "Bug 1873826 - Scrollbar gets hidden when opening dropdown menu"
This reverts commit de24d32a6dac3aa7124658b7b000de69c31c2412.

--- a/skins/standard/global.css
+++ b/skins/standard/global.css
@@ -337,10 +337,6 @@
  * Global
  */
 
-html {
-  scrollbar-gutter: stable both-edges;
-}
-
 body {
   font-size: var(--font-size-medium);
   line-height: var(--line-height-default);
